--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
