--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 pizza.inventory.mock=false
-pizza.inventory.url=https://api.pizza-inventory.com
+pizza.inventory.url=http://localhost:8092
 pizza.inventory.user=admin
 
 pizza.inventory.password=tester11
